# Curtain

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  events.csv  gunicorn.conf.py  progress.md  pyproject.toml  run.py  urls.csv  users.csv
.github/workflows/: tests.yml
app/: __init__.py  cache.py  database.py  gunicorn_logging.py  observability.py  redis_client.py  shard_ring.py  stream_consumer.py
app/models/: __init__.py  event.py  url.py  user.py
app/routes/: __init__.py  events.py  users.py  (+1 more)
docs/: API_EXAMPLES.md  ARCHITECTURE_EXPLAINATION.md  CAPACITY.md  DEPLOYMENT.md  DIAGNOST_ERRORS.md  ERROR_HANDELING.md  FAILURE_MODES.md  INCIDENT_RESPONSE.md  LOAD_TESTING.md  OBSERVABILITY.md  REDIS_INFO.md  RUNBOOK.md
evidence/: INCIDENT_RESPONSE_EVIDENCE.md  RELIABILITY_EVIDENCE.md  SCALABILITY_EVIDENCE.md
loadtests/: errorRateTest.js  highReadTest.js  highTrafficSimulation.js  loadTest.js  redirectTest.js  shardFailoverDemo.js  shortenTest.js
monitoring/: alerts.yml  discord_webhook_relay.py  prometheus.yml  prometheus_notifier.py
nginx/: nginx.conf
scripts/: demo.sh  init_db.py  reset_db.py  seed_csv.py  test_monitoring.sh  viz_load.sh
tests/: conftest.py  test_app_and_database.py  test_cache_routes.py  test_click_counter.py  test_events_routes.py  test_health.py  test_incident_response.py  test_integration_url_shortener.py  test_integration_urls.py  test_observability.py  test_shard_ring.py  test_stream_consumer.py  test_url_shortener_routes.py  test_url_shortener_service.py  test_urls_routes.py  test_users_routes.py
(+7 files in other folders)
